# aphids

./: .gitignore  MANIFEST.in  README.md  aphids.py  container_runtime.py  mcp_shim.py  pyproject.toml  setup.py  test-options-minimal.yaml
aphids_cli.egg-info/: PKG-INFO
tests/: test_mcp_shim.py
