[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aphids-cli"
version = "1.4.0"
description = "CLI interface for the Aphids security toolkit. Orchestrates penetration testing tools via containerized execution."
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.10"
authors = [
    {name = "Dark Side Security", email = "admin@darksidesecurity.io"},
]
keywords = ["pentest", "recon", "security", "appsec", "vulnerability-scanner", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/darksidesecurity/aphids"
Documentation = "https://aphids.darksidesecurity.io"
Repository = "https://github.com/darksidesecurity/aphids"
"Bug Tracker" = "https://github.com/darksidesecurity/aphids/issues"

[project.scripts]
aphids-cli = "aphids:cli"

[tool.setuptools]
py-modules = ["aphids", "mcp_shim", "container_runtime"]

[tool.setuptools.packages.find]
exclude = ["tests*", "build*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["aphids", "mcp_shim", "container_runtime"]
omit = ["tests/*"]
